workloads/minecraft/kustomize/i-1b163d47/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mc-i-1b163d47-deployment
  labels:
    app: mc-i-1b163d47-deployment

spec:
  replicas: 1
  revisionHistoryLimit: 1
  # Kubernetes tries to spin up a new pod before terminating the old one.
  # This will ensure the old pod lets go of the ReadWriteOnce PVC before the new one is created so that the new one can grab the PVC.
  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: mc-i-1b163d47-pod

  template:
    metadata:
      labels:
        app: mc-i-1b163d47-pod

    spec:
      containers:
        - name: mc-i-1b163d47
          image: itzg/minecraft-server:latest

          ports:
            - containerPort: 25565
              name: i-1b163d47-tcp
              protocol: TCP
            - containerPort: 24454
              name: i-1b163d47-udp
              protocol: UDP

          resources:
            limits:
              cpu:  2500m
              memory: 3000Mi
            requests:
              cpu: 1000m
              memory: 2000Mi

          startupProbe:
            exec:
              command:
                - mc-health
            initialDelaySeconds: 0
            # 5 minutes to start up:
            periodSeconds: 10
            failureThreshold: 30
            # 5 seconds to reply:
            timeoutSeconds: 5

          livenessProbe:
            exec:
              command:
                - mc-health
            # 2.5 minutes (5 missed messages) before death:
            periodSeconds: 30
            failureThreshold: 5
            # 5 seconds to reply:
            timeoutSeconds: 5


          readinessProbe:
            exec:
              command:
                - mc-health
            periodSeconds: 30
            failureThreshold: 5
            timeoutSeconds: 5

          volumeMounts:
            - name: mc-i-1b163d47-data
              mountPath: /data

            - name: mc-i-1b163d47-icon
              subPath: emoji_u1f359.png
              mountPath: /icon/icon.png

      volumes:
        - name: mc-i-1b163d47-data
          persistentVolumeClaim:
            claimName: mc-i-1b163d47-data

        - name: mc-i-1b163d47-configs
          configMap:
            name: mc-i-1b163d47-configs

        - name: mc-i-1b163d47-icon
          configMap:
            name: mc-i-1b163d47-icon
