workloads/minecraft/kustomize/i-1b163d47/svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: mc-i-1b163d47-svc

spec:
  type: ClusterIP

  selector:
    app: mc-i-1b163d47-pod

  ports:
    - name: i-1b163d47-tcp
      protocol: TCP
      port: 25565
      targetPort: i-1b163d47-tcp

    - name: i-1b163d47-udp
      protocol: UDP
      port: 24454
      targetPort: i-1b163d47-udp
